[gd_scene load_steps=35 format=3 uid="uid://bbckhx202xkna"]

[ext_resource type="PackedScene" uid="uid://c4lyr4r6pv8lu" path="res://scenes/exploration/player/player_controller.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://b15kp0tx43v6a" path="res://scenes/exploration/enemies/enemy_patrol.tscn" id="2"]
[ext_resource type="Script" uid="uid://8k4110w7gjp4" path="res://scenes/exploration/levels/test_room.gd" id="3"]
[ext_resource type="Script" uid="uid://cgmy3vwljghat" path="res://scripts/components/mesh_collision_sync.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://dars72atp7vap" path="res://scenes/exploration/enemies/WardenPatrol.tscn" id="4_301dv"]
[ext_resource type="Script" uid="uid://bwyhoebq0j2oy" path="res://scripts/components/climbable.gd" id="4_ltsvc"]
[ext_resource type="Material" uid="uid://d14ol7drqkcx2" path="res://materials/materials/distance_visualization_material.tres" id="4_oi2s7"]
[ext_resource type="PackedScene" uid="uid://b6o56b8r2cfy7" path="res://Imports/props/BasicArmor.tscn" id="6_dj340"]
[ext_resource type="Material" uid="uid://b8yu6xaa8r3u" path="res://materials/materials/glass_refraction_material.tres" id="7_g4wn3"]
[ext_resource type="PackedScene" path="res://scenes/exploration/environment/static_hdri_environment.tscn" id="7_j65ic"]
[ext_resource type="PackedScene" path="res://scenes/exploration/ui/exploration_ui.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://btwockurhrmtj" path="res://Imports/props/currency_pickup.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://dolxiqf3te0co" path="res://Imports/props/Hammer.tscn" id="9_mh5es"]
[ext_resource type="Script" uid="uid://bkg8npc403ars" path="res://scripts/components/background_music.gd" id="10_bgmusic"]
[ext_resource type="PackedScene" uid="uid://deki12ot3ip2g" path="res://Imports/TreeA/TreeAProp.tscn" id="15_ltsvc"]

[sub_resource type="BoxMesh" id="BoxMesh_301dv"]
size = Vector3(100.57, 1, 100.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.7, 0.7, 0.7, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(100, 0.1, 100)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(100, 4, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.6, 0.6, 0.8, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2"]
size = Vector3(100, 4, 0.3)

[sub_resource type="BoxMesh" id="BoxMesh_2"]
size = Vector3(0.3, 4, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_3"]
size = Vector3(0.3, 4, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_4"]
size = Vector3(150, 1, 150)

[sub_resource type="BoxMesh" id="BoxMesh_o6cdt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.4, 0.6, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_g4wn3"]

[sub_resource type="BoxMesh" id="BoxMesh_4"]
size = Vector3(4, 0.5, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4"]
albedo_color = Color(0.66756445, 0.45790118, 0.13157195, 1)
metallic_specular = 0.58

[sub_resource type="BoxShape3D" id="BoxShape3D_6"]
size = Vector3(4, 0.5, 4)

[sub_resource type="BoxMesh" id="BoxMesh_j65ic"]

[sub_resource type="BoxShape3D" id="BoxShape3D_exiqo"]
size = Vector3(20, 1, 30)

[sub_resource type="CylinderMesh" id="CylinderMesh_o6cdt"]
material = ExtResource("7_g4wn3")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g4wn3"]
custom_solver_bias = 1.0
height = 1.019043
radius = 12.608398

[node name="TestRoom" type="Node3D"]
script = ExtResource("3")

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Environment"]
script = ExtResource("4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
mesh = SubResource("BoxMesh_301dv")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("BoxShape3D_1")

[node name="CurrencyPickup" parent="Environment/Floor" instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.432789, 1.5021702, -24.535063)

[node name="CurrencyPickup2" parent="Environment/Floor" instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.841547, 1.5021702, -13.849327)

[node name="CurrencyPickup3" parent="Environment/Floor" instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.60102, 9.045541, -0.89322853)

[node name="CurrencyPickup4" parent="Environment/Floor" instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.458963, 8.725704, -19.150976)

[node name="CurrencyPickup5" parent="Environment/Floor" instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.754786, 8.725704, -4.830291)

[node name="WallNorth" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -50)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/WallNorth"]
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/WallNorth"]
shape = SubResource("BoxShape3D_2")

[node name="WallSouth" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 50)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/WallSouth"]
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/WallSouth"]
shape = SubResource("BoxShape3D_2")

[node name="WallWest" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/WallWest"]
mesh = SubResource("BoxMesh_2")
surface_material_override/0 = SubResource("StandardMaterial3D_2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/WallWest"]
shape = SubResource("BoxShape3D_3")

[node name="KillZone" type="Area3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/KillZone"]
transform = Transform3D(11.126199, 0, 0, 0, 1, 0, 0, 0, 9.713882, 0, -32.587715, 0)
shape = SubResource("BoxShape3D_4")

[node name="Lighting" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.9123271, -0.40945977, 0.0013834282, 0.40479717, -0.9014195, 0.1535647, -0.061631512, 0.14066125, 0.98813766, 0, 27.70203, 0)
light_color = Color(0.6241424, 0.3624398, 0.38844866, 1)
light_energy = 0.272
light_indirect_energy = 1.325
light_volumetric_fog_energy = 1.185
shadow_enabled = true

[node name="JumpPuzzle" type="Node3D" parent="Environment"]

[node name="Ramp" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(30.78, 0, 0, 0, 0.557492, -4.564249, 0, 0.2475938, 10.277044, 34.20636, 1.934258, -31.631454)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/Ramp"]
mesh = SubResource("BoxMesh_o6cdt")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/Ramp"]
shape = SubResource("BoxShape3D_g4wn3")

[node name="Platform1" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.84101, 5.449301, -40.1067)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/Platform1"]
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/Platform1"]
shape = SubResource("BoxShape3D_6")

[node name="Platform2" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.73648, 8.130522, -41.134422)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/Platform2"]
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/Platform2"]
shape = SubResource("BoxShape3D_6")

[node name="Platform3" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.89191, 6.5346622, -40.546623)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/Platform3"]
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/Platform3"]
shape = SubResource("BoxShape3D_6")

[node name="Platform4" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37.616516, 9.924585, -47.431236)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/Platform4"]
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/Platform4"]
shape = SubResource("BoxShape3D_6")

[node name="Platform5" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.657763, 12.14972, -43.98569)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/Platform5"]
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/Platform5"]
shape = SubResource("BoxShape3D_6")

[node name="Platform6" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.82613, 13.684866, -35.571495)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/Platform6"]
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/Platform6"]
shape = SubResource("BoxShape3D_6")

[node name="LargeFloatingPlatform" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.156574, 6.773533, -13.377699)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/LargeFloatingPlatform"]
transform = Transform3D(20, 0, 0, 0, 1, 0, 0, 0, 30, 0, 0, 0)
transparency = 0.32
mesh = SubResource("BoxMesh_j65ic")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/LargeFloatingPlatform"]
shape = SubResource("BoxShape3D_exiqo")

[node name="FloatingCirclePlatform" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.013961, 10.490828, 0)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/FloatingCirclePlatform"]
transform = Transform3D(25, 0, 0, 0, 0.5, 0, 0, 0, 25, 0, 0, 0)
material_override = ExtResource("4_oi2s7")
mesh = SubResource("CylinderMesh_o6cdt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/FloatingCirclePlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.014892578, 0)
shape = SubResource("CylinderShape3D_g4wn3")
debug_color = Color(0.27215096, 0.5987574, 0.5755123, 0.41960785)

[node name="FloatingCirclePlatform2" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(0.75581783, 0.21198119, -0.6195188, -0.27004597, 0.96284753, 0, 0.596502, 0.16729853, 0.78498185, -11.6796665, 12.023125, -28.094618)
script = ExtResource("4_ltsvc")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/FloatingCirclePlatform2"]
transform = Transform3D(25, 0, 0, 0, 0.5, 0, 0, 0, 25, 0, 0, 0)
material_override = ExtResource("7_g4wn3")
mesh = SubResource("CylinderMesh_o6cdt")
surface_material_override/0 = ExtResource("7_g4wn3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/FloatingCirclePlatform2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.014892578, 0)
shape = SubResource("CylinderShape3D_g4wn3")
debug_color = Color(0.27215096, 0.5987574, 0.5755123, 0.41960785)

[node name="Platform7" type="StaticBody3D" parent="Environment/JumpPuzzle"]
transform = Transform3D(17.148272, 0, 0, 0, 1, 0, 0, 0, 50.453102, 50.312695, -19.781973, -4.9234123)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/JumpPuzzle/Platform7"]
material_override = ExtResource("7_g4wn3")
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/JumpPuzzle/Platform7"]
shape = SubResource("BoxShape3D_6")

[node name="BasicArmor" parent="Environment" instance=ExtResource("6_dj340")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.603115, 7.688385, -6.9643316)

[node name="Hammer" parent="Environment" instance=ExtResource("9_mh5es")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.681732, 0.81348085, 18.224592)

[node name="PlayerSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.618599, 1, -25.963375)

[node name="EnemySpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 5)

[node name="PlayerController" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.118584, 11.574291, -15.971525)

[node name="EnemyPatrol" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 5)
patrol_points = Array[Vector3]([Vector3(-20, 1, -20), Vector3(20, 1, -20), Vector3(20, 1, 20), Vector3(-20, 1, 20)])

[node name="UI" parent="." instance=ExtResource("8")]

[node name="StaticHDRIEnvironment" parent="." instance=ExtResource("7_j65ic")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.902466, 0.05001831, 2.8898773)

[node name="Collectible" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.862595, 2.3210135, 3.911745)

[node name="EnemyPatrol2" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.257658, 1, 26.587162)
patrol_points = Array[Vector3]([Vector3(-20, 1, -20), Vector3(20, 1, -20), Vector3(20, 1, 20), Vector3(-20, 1, 20)])

[node name="EnemyPatrol3" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.030504, 1, 33.16539)
patrol_points = Array[Vector3]([Vector3(-20, 1, -20), Vector3(20, 1, -20), Vector3(20, 1, 20), Vector3(-20, 1, 20)])

[node name="EnemyPatrol4" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.887733, 1.0000076, -13.007233)
patrol_points = Array[Vector3]([Vector3(-20, 1, -20), Vector3(20, 1, -20), Vector3(20, 1, 20), Vector3(-20, 1, 20)])

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
volume_db = -29.299
pitch_scale = 0.85
script = ExtResource("10_bgmusic")

[node name="WardenPatrol" parent="." instance=ExtResource("4_301dv")]
transform = Transform3D(0.99861306, 0, 0.05264968, 0, 1, 0, -0.05264968, 0, 0.99861306, 6.529621, 11.592829, -2.1587543)
pursuit_speed = 2.2
detection_range = 12.0
bob_frequency = 0.02
sway_amplitude = 0.01
sway_frequency = 9.0

[node name="TreeAProp" parent="." instance=ExtResource("15_ltsvc")]
transform = Transform3D(1.5662824, 0, -0.95602536, 0, 1.835, 0, 0.95602536, 0, 1.5662824, 7.2854977, -0.6289557, -37.233547)
